--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>BillInsight</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
     </head>
